# do-it

./: .editorconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc  CONTRIBUTING.md  Cambalache.cmb  Doit.cmb  Doit.code-workspace  README.md  ambient.d.ts  br.dev.startap.tasks.json  build.sh  commitlint.config.js  commitlint.config.ts  commitlint.static.ts  env.d.ts  eslint.config.ts  global.d.ts  io.github.andrepg.DoIt.json  io.github.andrepg.Doit.devel.json  io.github.andrepg.Doit.flatpak  io.github.andrepg.Doit.json  jsconfig.json  meson.build  meson_options.txt  opencode.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.agent/rules/: code-guide.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-project/: action.yml
.github/workflows/: build-and-bundle.yml  build-test.yml  bundle-validation.yml  flatpak-bundle-validation.yml  flatpak-bundle.yml  flatpak-ci.yml  i18n-update.yml  opencode.yml  pr-checks.yml  quality-checks.yml  test-coverage.yml  version-bump.yml
.husky/: pre-commit  prepare-commit-msg
.qlty/: qlty.toml
data/: br.dev.startap.tasks.desktop.in  br.dev.startap.tasks.gschema.xml  br.dev.startap.tasks.metainfo.xml.in  br.dev.startap.tasks.service.in  io.github.andrepg.Doit.desktop.in  io.github.andrepg.Doit.gschema.xml  io.github.andrepg.Doit.gschema.xml.in  io.github.andrepg.Doit.metainfo.xml.in  io.github.andrepg.Doit.service.in  meson.build
data/icons/: meson.build
docs/: README.md  core.md  hooks-utils.md  platform-gnome.md  platform-web.md  shared-types.md
flatpak/: appstream-metainfo.xsd  generated-sources.json  io.github.andrepg.Doit-latest.pub  io.github.andrepg.Doit.Devel.json  io.github.andrepg.Doit.ci.json  io.github.andrepg.Doit.devel.json  io.github.andrepg.Doit.json
po/: LINGUAS  POTFILES.in  en.po  en_US.po  es.po  io.github.andrepg.Doit.pot  meson.build  pt_BR.po
scripts/: README.md  build-and-install.sh  commit-prompt.mjs  compile  compile.sh  flatpak-export-bundle  flatpak-prebuild  flatpak-validation  flatpak-validation.sh  generate-sources  install  install.sh  lib-common.sh  pot-generator  run  run-dev  run.sh  update-pot-file  update-pot-file.sh  validate-flatpak-bundle
src/: app.entrypoint.ts  app.enums.ts  app.static.ts  app.strings.ts  app.ts  app.types.ts  app.wrapper.ts  br.dev.startap.tasks.data.gresource.xml  br.dev.startap.tasks.src.gresource.xml  doit.ts  entrypoint.ts  io.github.andrepg.DoIt.data.gresource.xml  io.github.andrepg.DoIt.src.gresource.xml  io.github.andrepg.Doit.data.gresource.xml  io.github.andrepg.Doit.in  io.github.andrepg.Doit.src.gresource.xml  io.github.andrepg.Doit.src.gresource.xml.in  main.js  main.ts  meson.build  persistence.js  static.js  task.ui  types.ts  window.js  window.ui
src/actions/: about.ts  backup.ts  index.ts  new-task.ts  projects-sidebar.ts  projects.ts  purge-deleted.ts  quit.ts  shortcuts.ts  sidebar.ts  task-edit.ts  toast.ts
src/core/interfaces/: persistence.ts  settings.ts  task-view.ts
src/core/persistence/: file-persistence.ts
src/core/utils/: sort.ts
src/hooks/: autocomplete.ts  settings.ts  tasks.sort.ts  useProjectGroups.ts
src/js/: confirm-task-delete.js  persistence.js  task.js  window.js
src/platform/gnome/: enums.ts  index.ts
src/platform/gnome/actions/: about.ts  backup.ts  index.ts  new-task.ts  projects-sidebar.ts  projects-utils.ts  projects.ts  purge-deleted.ts  quit.ts  shortcuts.ts  sidebar.ts  task-edit.ts  toast.ts
src/platform/gnome/persistence/: gio-persistence.ts
src/platform/gnome/views/: doit.ts  index.ts  popover-sort.ts  sidebar-button.ts  task-form.ts  task-group.ts  task-item.ts  task-list-store.ts  task-list.ts
src/platform/gnome/widgets/: application.ui  empty-list.ui  io.github.andrepg.Doit.data.gresource.xml.in  meson.build  shortcuts-dialog.ui  sidebar-button.ui  task-form.ui  window-v2.ui
src/tasks/: tasks.filter.ts
src/ui/: confirm-task-delete.ui  empty_tasks.ui  task-list.cmb.ui  task-list.ui  task.cmb.ui  task.ui  window.ui
src/ui-handler/: doit.ts  popover-sort.ts  sidebar-button.ts  task-form.ts  task-group.ts  task-item.ts  task-list-store.ts  task-list.js  task-list.ts  task.js  task.ts  window.js  window.ts
src/utils/: application.js  backup.js  backup.ts  export.js  list-store.js  list-store.ts  log-manager.js  log-manager.ts  persistence.js  persistence.ts  project-manager.ts  settings.ts  sorting.js  sorting.ts
tests/: setup.ts
tests/hooks/: tasks.sort.test.ts
tests/mocks/: gio.ts  glib.ts  gobject.ts
tests/utils/: persistence.test.ts  project-manager.test.ts
tests/views/: task-form.test.ts
ui/: application.ui  empty-list.ui  empty_tasks.ui  io.github.andrepg.Doit.data.gresource.xml  io.github.andrepg.Doit.data.gresource.xml.in  meson.build  popover-sort.ui  sidebar-button.ui  task-form.ui  task-group.ui  task-list.ui  task.ui  window-v2.ui  window.ui
